# mycraft-rs

./: Cargo.toml  README.md
src/: main.rs
src/packet/: builder.rs  chunk.rs  codec.rs  mod.rs  reader.rs
