[package]
name = "mycraft"
version = "0.1.0"
authors = ["Tanapol Prucksakorn <tanapol.pr@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zynaxsoft/mycraft-rs"
homepage = "https://github.com/zynaxsoft/mycraft-rs"
keywords = ["gamedev", "minecraft"]
description = "A custom Minecraft server framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
async-codec = "0.4.0-alpha.4"
color-eyre = { version = "0.5.1", default-features = false }
thiserror = "1.0.20"
async-std = "1.6.3"
